--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,23 @@
+absl-py==0.7.0
+astor==0.7.1
+gast==0.2.2
+grpcio==1.19.0
+h5py==2.9.0
+Keras==2.2.4
+Keras-Applications==1.0.7
+Keras-Preprocessing==1.0.9
 llvmlite==0.27.0
+Markdown==3.0.1
+mock==2.0.0
 numba==0.42.0
 numpy==1.16.1
+pbr==5.1.2
+protobuf==3.6.1
+PyYAML==3.13
+scipy==1.2.1
+six==1.12.0
+tensorboard==1.12.2
+tensorflow==1.12.0
+tensorflow-estimator==1.13.0
+termcolor==1.1.0
+Werkzeug==0.14.1
